# sham

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  ShamBuffer.h  ShamQueue.h  ShamQueueMPMC.h  main.cpp  sham_benchmark.h  sham_buffer.h  sham_os.h  sham_test.cpp
.github/workflows/: cmake.yml
cmake/: Findatomic_queue.cmake  Findconcurrentqueue.cmake
src/: sham_benchmark.h  sham_buffer.h  sham_format.h  sham_os.h  sham_test.cpp  sham_timer.h
src/adapters/: CMakeLists.txt
src/adapters/include/adapters/: atomic_queue_adapter.h  concurrentqueue_adapter.h  mpmc_var_adapter.h
src/benchmarks/: CMakeLists.txt  queue_mpmc_benchmarks.cpp
src/sham/: CMakeLists.txt
src/sham/include/sham/: benchmark.h  queue_locking.h  queue_mpmc.h  queue_mpmc_var.h  shared_memory.h  shared_memory_buffer.h  timer.h
src/tests/: CMakeLists.txt  mpmc_var_test.cpp  queue_mpmc_test.cpp
tests/sham/: CMakeLists.txt  queue_mpmc_test.cpp  sham.cpp  shared_memory_buffer_test.cpp  shared_memory_test.cpp
tests/sham/adapters/: atomic_queue_adapter.h  concurrent_queue.h  concurrentqueue_adapter.h
